--- a/index.html
+++ b/index.html
@@ -61,35 +61,30 @@
           <div class="menu-content">
             <div class="menu-content1">
               <div class="menu-image">
-                <img src="image/menu1.png" alt="" width="120px" />
+                <img src="image/menu1.png" alt="" width="200px" />
               </div>
-              <div class="menu-text">
-                <h3>Crape</h3>
-                <p>
-                一品ごとに手の込んだ出来立てクレープは絶品です。
-                <!-- 見た目の細部までこだわりを見せるクレープはほかのお店では体験できません。 -->
-                </p>
-              </div>
+              <h3>Crape</h3>
+              <p>
+                てきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすと
+              </p>
             </div>
             <div class="menu-content2">
               <div class="menu-image">
-                <img src="image/menu2.png" alt="" width="120px" />
+                <img src="image/menu2.png" alt="" width="200px" />
               </div>
-              <div class="menu-text">
-                <h3>Crape</h3>
-                <p>
-                  てきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすと
-                </p>
+              <h3>Gallet</h3>
+              <p>
+                てきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすと
+              </p>
             </div>
             <div class="menu-content3">
               <div class="menu-image">
-                <img src="image/menu3.png" alt="" width="120px" />
+                <img src="image/menu3.png" alt="" width="200px" />
               </div>
-                <div class="menu-text">
-                  <h3>Crape</h3>
-                  <p>
-                    てきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすと
-                  </p>
+              <h3>Tea</h3>
+              <p>
+                てきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすとてきすと
+              </p>
             </div>
           </div>
         </div>
@@ -158,6 +153,7 @@
 
         <!-- <iframe width="100%" height="315" src="https://www.youtube.com/embed/0s_77eyb7So" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe> -->
+     
       </div>
     </footer>
   </body>
