--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
               てきすとてきすと てきすと てきすと てきすと てきすと てきすと
             </p>
           </div>
+
+          <img class="crape1" src="image/crape.png" width="150px" alt="">
         </div>
         <div class="menu-section">
           <h2>MENU</h2>
