--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
     </header>
     <main>
       <!-- 背景写真 -->
-      <div class="top-image" id="top"></div>
+      <div class="top-image" id="top">
+        <!-- <div class="top-text">
+          <p>一品ごと手の込んだ、出来立てクレープやガレットを食べ放題で召し上がれます。</p>
+        </div> -->
+      </div>
       <div class="wrapper">
         <div class="news-section">
           <h2>NEWS</h2>
